A       html/images/cat_tst_seg_real_boxplot.png
A       html/images/cat_tst_seg_real_detail.png
 M      internal

(1)  Fixed:   Corrected APP GUI type from natural (1..n) to whole (0..n) number.
(2)  New:     Added "validation" HTML page with BWP and expert segmentation 
              results of SPM, VBM, and CAT releases.  
(3)  Fixed:   Updated lazy preprocessing 
(4)  Changed: Updated axis limitation in "cat_plot_boxplot" to avoid ignoring 
              of outliers. Further changes to control yticks and ylabels.
(5)  Changed: Updated lazy processing (developer mode), to rerun batches and 
              avoid reprocessing of successful processed images in case of 
              "segmentation violation" errors that killed previous Matlab 
              instances. 
(6) Fixed:    Corrected division by zero warnings in "cat_run_job_APP_init".
(7) Changed:  Updated color range in "cat_tst_calc_kappa" in case of real data.
(8) Changed:  Added "extops.regstr" parameter in "cat_tst_cattest".

------------------------------------------------------------------------
r1105 | gaser | 2017-01-24 15:51:31 +0100 (Di, 24 Jan 2017) | 8 lines

Changed paths:
M       CHANGES.txt
M       cat_stat_check_cov.m
M       html/cat_methods_validation.html

(1) Fixed: Slice for samples 2..n were not displayed in cat_stat_check_cov.m.
(2) Changed: Updated HTML documentation about segmentation validation.

------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       cat_plot_boxplot.m
 M      html/cat_methods_validation.html
 M      html/images/cat_tst_seg_BWP_boxplot.png
 M      html/images/cat_tst_seg_BWP_detail.png
 M      html/images/cat_tst_seg_real_boxplot.png
 M      html/images/cat_tst_seg_real_detail.png

Fixed: cat_plot_boxplot.m did not worked correctly if no additional flags were
defined.

------------------------------------------------------------------------
r1106 | gaser | 2017-01-24 16:22:14